do not remove character names from tokens

--- a/PreprocessCharacterDescriptions.ipynb
+++ b/PreprocessCharacterDescriptions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
     "    return processed_text \n",
     "\n",
     "\n",
-    "def get_tokens(processed_text, character_names=None):\n",
+    "def get_tokens(processed_text, character_name=None, character_names=None):\n",
     "    # 3. Tokenize content\n",
     "    tk = WordPunctTokenizer()\n",
     "    tokens = tk.tokenize(processed_text) \n",
@@ -150,12 +150,12 @@
     "                       'episodes', 'character', 'nbc', 'season', 'wiki', 'deleted', 'portrayed', 'television', 'fictional', 'appears', \\\n",
     "                       'appearance', 'get', 'seasons', 'one', 'series', 'make', 'yes', 'history', 'first', 'titled', 'scene','wikipedia', 'played'])\n",
     "    lemmatizer = WordNetLemmatizer()  # used to lemantize the words\n",
-    "    \n",
+    "\n",
     "    filtered_tokens = []\n",
     "    for t in tokens: \n",
     "        t_lower = t.lower() # convert text to lowercase\n",
     "        if t_lower in stop_words: continue\n",
-    "        if character_names and t_lower in character_names: continue\n",
+    "        if character_name and t_lower == character_name.lower(): continue\n",
     "        t_lower_lemantized = lemmatizer.lemmatize(t_lower) # lemantize the lowercase word\n",
     "        if t_lower_lemantized in stop_words: continue\n",
     "        filtered_tokens.append(t_lower_lemantized) # add it to the final list of tokens\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
     "for index, row in main_characters_df.iterrows():                       # number of files belonging to this race\n",
     "        character_name = row['Name']\n",
     "        processed_text = process_text(character_name) \n",
-    "        tokens = get_tokens(processed_text, lower_pluralized_character_names)\n",
+    "        tokens = get_tokens(processed_text, character_name.split(' ')[0], lower_pluralized_character_names)\n",
     "        main_characters_tokens[character_name] = tokens\n",
     "\n",
     "with open('data/main_characters_tokens.csv', \"w+\") as file:\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
     "    community_dict[community_index] = []\n",
     "    for document in community:\n",
     "        processed_text = process_text(document)\n",
-    "        tokens = get_tokens(processed_text, lower_pluralized_character_names)\n",
+    "        tokens = get_tokens(processed_text)\n",
     "        \n",
     "        community_dict[community_index].append(tokens)\n",
     "\n",
