--- a/PreprocessCharacterDescriptions.ipynb
+++ b/PreprocessCharacterDescriptions.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,9 +180,11 @@
     "        lower_pluralized_character_names.append(n_) # separate names and surnames\n",
     "    lower_pluralized_character_names.append(pluralize(n.split(' ')[0]))\n",
     "\n",
+    "main_characters = ['Andy Bernard', 'Angela Martin', 'Creed Bratton', 'Darryl Philbin', 'Dwight Schrute', \\\n",
+    "                  'Jim Halpert', 'Kelly Kapoor', 'Kevin Malone', 'Meredith Palmer', 'Michael Scott', 'Pam Beesly', \\\n",
+    "                  'Phyllis Vance', 'Ryan Howard', 'Stanley Hudson', 'Oscar Martinez', 'Toby Flenderson']\n",
     "\n",
-    "main_characters_df = df.loc[df['Main Role'].isin(['Main Characters'])]\n",
-    "\n",
+    "main_characters_df = df.loc[df['Name'].isin(main_characters)]\n",
     "main_characters_tokens = {}\n",
     "for index, row in main_characters_df.iterrows():                       # number of files belonging to this race\n",
     "        character_name = row['Name']\n",
