updated plots, added hover text, some light formatting

--- a/PreprocessCharacterDescriptions.ipynb
+++ b/PreprocessCharacterDescriptions.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +149,8 @@
     "                       'office', 'episode', 'episodethe', 'become', 'becomes', 'became', 'take', 'show', 'seen', 'see',\\\n",
     "                       'episodes', 'character', 'nbc', 'season', 'wiki', 'deleted', 'portrayed', 'television', 'fictional', 'appears', \\\n",
     "                       'appearance', 'get', 'seasons', 'one', 'series', 'make', 'yes', 'history', 'first', 'titled', 'scene','wikipedia', 'played'])\n",
+    "    stop_words.update([\"oh\", \"yeah\", \"ok\", \"dont\", \"hey\", \"okay\", \"know\", \"right\", \"well\", 'brittany', \"ishibashi\"])\n",
+    "\n",
     "    lemmatizer = WordNetLemmatizer()  # used to lemantize the words\n",
     "\n",
     "    filtered_tokens = []\n",
@@ -158,6 +160,7 @@
     "        if character_name and t_lower == character_name.lower(): continue\n",
     "        t_lower_lemantized = lemmatizer.lemmatize(t_lower) # lemantize the lowercase word\n",
     "        if t_lower_lemantized in stop_words: continue\n",
+    "        if character_names and t_lower_lemantized in character_names: continue\n",
     "        filtered_tokens.append(t_lower_lemantized) # add it to the final list of tokens\n",
     "    \n",
     "    return filtered_tokens"
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +197,28 @@
     "\n",
     "with open('data/main_characters_tokens.csv', \"w+\") as file:\n",
     "    file.write(json.dumps(main_characters_tokens))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "community_dict = {}\n",
+    "with open('data/communities.csv') as file:\n",
+    "    top_five_communities = json.loads(file.read())\n",
+    "\n",
+    "for community_index, community in top_five_communities:\n",
+    "    community_dict[community_index] = []\n",
+    "    for document in community:\n",
+    "        processed_text = process_text(document)\n",
+    "        tokens = get_tokens(processed_text, character_names=lower_pluralized_character_names)\n",
+    "        \n",
+    "        community_dict[community_index].append(tokens)\n",
+    "\n",
+    "with open('data/community_dict.csv', \"w+\") as file:\n",
+    "    file.write(json.dumps(community_dict)) "
    ]
   }
  ],
