--- a/PreprocessCharacterDescriptions.ipynb
+++ b/PreprocessCharacterDescriptions.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,11 +145,11 @@
     " \n",
     "\n",
     "    stop_words = set(stopwords.words('english')) \n",
-    "    stop_words.update(['tell', 'say', 'ask', 'asks', 'says', 'later', 'dunder', 'mifflin', 'name', 'eventually', \\\n",
+    "    stop_words.update(['tell', 'say', 'ask', 'asks', 'says', 'later', 'name', 'eventually', \\\n",
     "                       'office', 'episode', 'episodethe', 'become', 'becomes', 'became', 'take', 'show', 'seen', 'see',\\\n",
     "                       'episodes', 'character', 'nbc', 'season', 'wiki', 'deleted', 'portrayed', 'television', 'fictional', 'appears', \\\n",
     "                       'appearance', 'get', 'seasons', 'one', 'series', 'make', 'yes', 'history', 'first', 'titled', 'scene','wikipedia', 'played'])\n",
-    "    stop_words.update([\"oh\", \"yeah\", \"ok\", \"dont\", \"hey\", \"okay\", \"know\", \"right\", \"well\", 'brittany', \"ishibashi\"])\n",
+    "    stop_words.update([\"oh\", \"yeah\", \"ok\", \"dont\", \"hey\", \"okay\", \"know\", \"right\", \"well\", \"fischer\", 'brittany', \"ishibashi\"])\n",
     "\n",
     "    lemmatizer = WordNetLemmatizer()  # used to lemantize the words\n",
     "\n",
@@ -168,11 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/characters.csv')\n",
+    "df = pd.read_csv('data/dunderpedia_characters.csv')\n",
     "\n",
     "character_names = df.Name\n",
     "lower_pluralized_character_names = []\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
