--- a/Preprocessing_Dunderpedia.ipynb
+++ b/Preprocessing_Dunderpedia.ipynb
@@ -11,7 +11,21 @@
     "import json\n",
     "import pandas as pd\n",
     "import re\n",
-    "import requests"
+    "import requests\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "36f67dce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create directories used to save data\n",
+    "os.makedirs(\"data\", exist_ok=True) \n",
+    "os.makedirs(\"data/characters\", exist_ok=True) \n",
+    "os.makedirs(\"data/thumbnails\", exist_ok=True)  "
    ]
   },
   {
@@ -37,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7446ced9",
    "metadata": {},
    "outputs": [
@@ -75,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d26d4b6a",
    "metadata": {},
    "outputs": [],
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "78bc64bb",
    "metadata": {
     "scrolled": true
@@ -140,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2ae5ebd8",
    "metadata": {},
    "outputs": [
@@ -478,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7c48e7e1",
    "metadata": {},
    "outputs": [],
@@ -498,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0dc0aa7b",
    "metadata": {},
    "outputs": [],
@@ -549,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6860a74a",
    "metadata": {},
    "outputs": [
@@ -601,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8c981dc8",
    "metadata": {},
    "outputs": [],
@@ -622,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d4cb9785",
    "metadata": {},
    "outputs": [],
@@ -670,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "49af6149",
    "metadata": {},
    "outputs": [],
@@ -685,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1e76fb11",
    "metadata": {},
    "outputs": [],
@@ -717,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b0eae4a7",
    "metadata": {
     "scrolled": true
@@ -751,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "0fa46536",
    "metadata": {
     "scrolled": false
@@ -866,7 +880,7 @@
        "4               [Pam Beesly, Alex, Karen Filippelli]  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8c05247e",
    "metadata": {
     "scrolled": true
@@ -1218,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7fe964e4",
    "metadata": {
     "scrolled": true
@@ -1274,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e65b9347",
    "metadata": {},
    "outputs": [],
@@ -1284,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "ef64cd4b",
    "metadata": {},
    "outputs": [],
@@ -1294,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c999afac",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1427,7 @@
        "4               [Pam Beesly, Alex, Karen Filippelli]        Alex.jpg  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "a3243158",
    "metadata": {},
    "outputs": [],
