--- a/Preprocessing_IMDB_Kaggle_Office.ipynb
+++ b/Preprocessing_IMDB_Kaggle_Office.ipynb
@@ -291,7 +291,7 @@
        "      <td>1</td>\n",
        "      <td>Pilot</td>\n",
        "      <td>7.4</td>\n",
-       "      <td>7134</td>\n",
+       "      <td>7137</td>\n",
        "      <td>24 Mar 2005</td>\n",
        "      <td>The premiere episode introduces the boss and s...</td>\n",
        "    </tr>\n",
@@ -301,7 +301,7 @@
        "      <td>2</td>\n",
        "      <td>Diversity Day</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>7033</td>\n",
+       "      <td>7036</td>\n",
        "      <td>16 Mar 2005</td>\n",
        "      <td>Michael's off color remark puts a sensitivity ...</td>\n",
        "    </tr>\n",
@@ -311,7 +311,7 @@
        "      <td>3</td>\n",
        "      <td>Health Care</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>5863</td>\n",
+       "      <td>5865</td>\n",
        "      <td>5 Apr 2005</td>\n",
        "      <td>Michael leaves Dwight in charge of picking the...</td>\n",
        "    </tr>\n",
@@ -321,7 +321,7 @@
        "      <td>4</td>\n",
        "      <td>The Alliance</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>5673</td>\n",
+       "      <td>5676</td>\n",
        "      <td>12 Apr 2005</td>\n",
        "      <td>Just for a laugh, Jim agrees to an alliance wi...</td>\n",
        "    </tr>\n",
@@ -331,7 +331,7 @@
        "      <td>5</td>\n",
        "      <td>Basketball</td>\n",
        "      <td>8.4</td>\n",
-       "      <td>6299</td>\n",
+       "      <td>6303</td>\n",
        "      <td>19 Apr 2005</td>\n",
        "      <td>Michael and his staff challenge the warehouse ...</td>\n",
        "    </tr>\n",
@@ -341,11 +341,11 @@
       ],
       "text/plain": [
        "   Season  Episode   EpisodeTitle IMDBRating  TotalVotes      AirDate  \\\n",
-       "0       1        1          Pilot        7.4        7134  24 Mar 2005   \n",
-       "1       1        2  Diversity Day        8.3        7033  16 Mar 2005   \n",
-       "2       1        3    Health Care        7.7        5863   5 Apr 2005   \n",
-       "3       1        4   The Alliance        8.0        5673  12 Apr 2005   \n",
-       "4       1        5     Basketball        8.4        6299  19 Apr 2005   \n",
+       "0       1        1          Pilot        7.4        7137  24 Mar 2005   \n",
+       "1       1        2  Diversity Day        8.3        7036  16 Mar 2005   \n",
+       "2       1        3    Health Care        7.7        5865   5 Apr 2005   \n",
+       "3       1        4   The Alliance        8.0        5676  12 Apr 2005   \n",
+       "4       1        5     Basketball        8.4        6303  19 Apr 2005   \n",
        "\n",
        "                                         Description  \n",
        "0  The premiere episode introduces the boss and s...  \n",
@@ -390,7 +390,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 10,
@@ -679,7 +679,7 @@
        "      <td>1</td>\n",
        "      <td>Pilot</td>\n",
        "      <td>7.4</td>\n",
-       "      <td>7134</td>\n",
+       "      <td>7137</td>\n",
        "      <td>24 Mar 2005</td>\n",
        "      <td>The premiere episode introduces the boss and s...</td>\n",
        "      <td>11.2</td>\n",
@@ -694,7 +694,7 @@
        "      <td>2</td>\n",
        "      <td>Diversity Day</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>7033</td>\n",
+       "      <td>7036</td>\n",
        "      <td>16 Mar 2005</td>\n",
        "      <td>Michael's off color remark puts a sensitivity ...</td>\n",
        "      <td>6.0</td>\n",
@@ -709,7 +709,7 @@
        "      <td>3</td>\n",
        "      <td>Health Care</td>\n",
        "      <td>7.7</td>\n",
-       "      <td>5863</td>\n",
+       "      <td>5865</td>\n",
        "      <td>5 Apr 2005</td>\n",
        "      <td>Michael leaves Dwight in charge of picking the...</td>\n",
        "      <td>5.8</td>\n",
@@ -724,7 +724,7 @@
        "      <td>4</td>\n",
        "      <td>The Alliance</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>5673</td>\n",
+       "      <td>5676</td>\n",
        "      <td>12 Apr 2005</td>\n",
        "      <td>Just for a laugh, Jim agrees to an alliance wi...</td>\n",
        "      <td>5.4</td>\n",
@@ -739,7 +739,7 @@
        "      <td>5</td>\n",
        "      <td>Basketball</td>\n",
        "      <td>8.4</td>\n",
-       "      <td>6299</td>\n",
+       "      <td>6303</td>\n",
        "      <td>19 Apr 2005</td>\n",
        "      <td>Michael and his staff challenge the warehouse ...</td>\n",
        "      <td>5.0</td>\n",
@@ -754,11 +754,11 @@
       ],
       "text/plain": [
        "   Season  Episode   EpisodeTitle  IMDBRating  TotalVotes      AirDate  \\\n",
-       "0       1        1          Pilot         7.4        7134  24 Mar 2005   \n",
-       "1       1        2  Diversity Day         8.3        7033  16 Mar 2005   \n",
-       "2       1        3    Health Care         7.7        5863   5 Apr 2005   \n",
-       "3       1        4   The Alliance         8.0        5673  12 Apr 2005   \n",
-       "4       1        5     Basketball         8.4        6299  19 Apr 2005   \n",
+       "0       1        1          Pilot         7.4        7137  24 Mar 2005   \n",
+       "1       1        2  Diversity Day         8.3        7036  16 Mar 2005   \n",
+       "2       1        3    Health Care         7.7        5865   5 Apr 2005   \n",
+       "3       1        4   The Alliance         8.0        5676  12 Apr 2005   \n",
+       "4       1        5     Basketball         8.4        6303  19 Apr 2005   \n",
        "\n",
        "                                         Description  Viewership GuestStars  \\\n",
        "0  The premiere episode introduces the boss and s...        11.2        NaN   \n",
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "91096db4",
    "metadata": {},
    "outputs": [],
